# M5EPD

./: CMakeLists.txt  README.md  README_cn.md  library.json  library.properties
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/actions/: arduino-test-compile.sh
.github/workflows/: Arduino-Lint-Check.yml  arduino-action-paper-compile.yml  clang-format-check.yml
src/: M5EPD.cpp  M5EPD.h  M5EPD_Canvas.cpp  M5EPD_Canvas.h  M5EPD_Driver.cpp  M5EPD_Driver.h  ffsupport.cpp  ffsupport.h  font_render.c  font_render.h  ft2build.h
src/base/: basepic.c  basepic.h  ftadvanc.c  ftapi.c  ftbase.c  ftbase.h  ftbbox.c  ftbitmap.c  ftcalc.c  ftdbgmem.c  ftdebug.c  ftfstype.c  ftgasp.c  ftgloadr.c  ftglyph.c  ftgxval.c  ftinit.c  ftobjs.c  ftoutln.c  ftpic.c  ftrfork.c  ftsnames.c  ftstream.c  ftsystem.cpp  fttrigon.c  ftutil.c  md5.c
src/freetype/: freetype.h  ftautoh.h  ftbbox.h  ftbdf.h  ftbzip2.h  ftcache.h  ftcffdrv.h  ftchapters.h  fterrdef.h  fterrors.h  ftgasp.h  ftglyph.h  ftgxval.h  ftimage.h  ftincrem.h  ftlcdfil.h  ftmac.h  ftmm.h  ftmodapi.h  ftmoderr.h  ftotval.h  ftoutln.h  ftrender.h  ftsnames.h  ftstroke.h  ftsynth.h  ftsystem.h  fttrigon.h  fttypes.h  ftwinfnt.h  t1tables.h  ttnameid.h  tttables.h  tttags.h
src/sfnt/: sfdriver.c  sferrors.h  sfnt.c  sfntpic.c  sfntpic.h  sfobjs.c  ttbdf.c  ttcmap.c  ttcmap.h  ttkern.c  ttload.c  ttmtx.c  ttpost.c  ttsbit.c  ttsbit0.c
src/smooth/: ftgrays.c  ftsmerrs.h  ftsmooth.c  ftspic.c  ftspic.h  smooth.c
src/truetype/: truetype.c  ttdriver.c  tterrors.h  ttgload.c  ttgload.h  ttinterp.c  ttinterp.h  ttobjs.c  ttobjs.h  (+5 more)
(+77 files in other folders)
